--- a/MobileApp/Base.lproj/Main.storyboard
+++ b/MobileApp/Base.lproj/Main.storyboard
@@ -24,11 +24,11 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ZNC-Nl-Sfe" id="l7g-7U-A6W">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="70k-1V-TYW">
-                                            <rect key="frame" x="15" y="0.0" width="345" height="43.5"/>
+                                            <rect key="frame" x="15" y="0.0" width="345" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
@@ -145,13 +145,13 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Bau-Cv-4vH">
-                                                <rect key="frame" x="0.0" y="86.5" width="375" height="90"/>
+                                                <rect key="frame" x="0.0" y="86.5" width="375" height="80"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="90" id="VWB-kq-dJ9"/>
+                                                    <constraint firstAttribute="height" constant="80" id="aMg-2e-bcG"/>
                                                 </constraints>
                                             </mapView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PKV-AR-0dt">
-                                                <rect key="frame" x="0.0" y="161.5" width="375" height="15"/>
+                                                <rect key="frame" x="0.0" y="151.5" width="375" height="15"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HkE-zM-xyX">
                                                         <rect key="frame" x="0.0" y="0.0" width="295" height="13.5"/>
@@ -169,9 +169,9 @@
                                                 </constraints>
                                             </view>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PIN-1" translatesAutoresizingMaskIntoConstraints="NO" id="9Jq-sk-ZdQ">
-                                                <rect key="frame" x="300" y="102" width="75" height="74"/>
+                                                <rect key="frame" x="337" y="136" width="38" height="30"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="75" id="HVh-o7-ICY"/>
+                                                    <constraint firstAttribute="width" constant="38" id="HVh-o7-ICY"/>
                                                 </constraints>
                                             </imageView>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="145" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="3jx-u6-Mh9">
@@ -271,7 +271,7 @@
                                             <constraint firstItem="4v8-sy-N8T" firstAttribute="top" secondItem="Qvb-2K-ZRi" secondAttribute="bottom" constant="5" id="lZj-9p-Hbx"/>
                                             <constraint firstItem="9Jq-sk-ZdQ" firstAttribute="trailing" secondItem="PKV-AR-0dt" secondAttribute="trailing" id="mqE-68-eww"/>
                                             <constraint firstItem="Qvb-2K-ZRi" firstAttribute="leading" secondItem="0KE-Zv-7qp" secondAttribute="leading" constant="20" id="t7a-vd-fgT"/>
-                                            <constraint firstItem="9Jq-sk-ZdQ" firstAttribute="top" secondItem="PNc-K8-MB2" secondAttribute="bottom" constant="25" id="uMf-MP-22Z"/>
+                                            <constraint firstItem="9Jq-sk-ZdQ" firstAttribute="top" secondItem="PNc-K8-MB2" secondAttribute="bottom" constant="59.5" id="uMf-MP-22Z"/>
                                             <constraint firstAttribute="trailing" secondItem="Bau-Cv-4vH" secondAttribute="trailing" id="xAJ-dx-Uv4"/>
                                         </constraints>
                                     </view>
